<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tuneramblr</string>
    <string name="addBtn">I like it!</string>
    <string name="userDefStr">Enter some tags seperated by commas!</string>
    <string name="logoDescription">tuneramblr</string>
    <string name="takePhoto">Take Photo</string>
    <string name="songSubmitted">The track has been submitted!</string>
    <string name="loginBtn">Login</string>
    <string name="usernameStr">Username</string>
    <string name="passwordStr">Password</string>
    <string name="trackNameStr">Track Name</string>
    <string name="artistNameStr">Artist Name</string>
    <string name="albumNameStr">Album Name</string>
    <string name="pref_back_track_info">Background Track Info</string>
    <string name="pref_back_track_info_summ">Passively collect track information in the background</string>
    <string name="settings_title">Settings</string>
    <string name="doing_what_hint_text">What are you up to?</string>

</resources>