<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_fragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >

    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:text="@string/loginBtn" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/logoDescription"
        android:src="@drawable/tr_logo" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordInput"
        android:layout_alignLeft="@+id/passwordInput"
        android:layout_alignRight="@+id/imageView1"
        android:layout_marginBottom="49dp"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/usernameInput"
        android:layout_alignBottom="@+id/usernameInput"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_marginLeft="14dp"
        android:text="@string/usernameStr"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginButton"
            android:layout_alignRight="@+id/imageView1"
            android:layout_marginBottom="49dp"
            android:layout_toRightOf="@+id/usernameLabel"
            android:inputType="textPassword" >
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordInput"
        android:layout_alignBottom="@+id/passwordInput"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_marginLeft="14dp"
        android:text="@string/passwordStr"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>